# Know-it-backend

./: .env.example  .env.prod.example  .gitignore  Caddyfile  Dockerfile  FRONTEND_GOOGLE_AUTH_PROMPT.md  FRONTEND_SUBSCRIPTION_PROMPT.md  PROJECT_STRUCTURE.md  README.md  SKILL.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pgadmin-servers.json  pyproject.toml  requirements.txt
.claude/plan/: google-auth.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: add_flashcards_and_decks.py  add_notifications.py  add_password_reset_codes.py  add_subscriptions_and_usage.py  add_topic_favorite.py  add_users_auth.py  fix_picture_url_length.py
app/: Oauth.py  __init__.py  config.py  database.py  dependencies.py  email_service.py  main.py  rate_limit.py
app/analysis/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/auth/: __init__.py  models.py  oauth.py  repository.py  router.py  schemas.py  service.py
app/core/: dependencies.py  exceptions.py
app/flashcards/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  srs.py
app/notifications/: __init__.py  models.py  repository.py  router.py  scheduler.py  schemas.py  service.py
app/subscriptions/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/topics/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/transcription/: __init__.py  router.py  schemas.py  service.py
