[project]
name = "know-it-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.6",
    "google-auth>=2.47.0",
    "httpx>=0.28.1",
    "jose==1.0.0",
    "openai==1.58.1",
    "passlib>=1.7.4",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "python-jose>=3.5.0",
    "python-multipart==0.0.19",
    "sqlalchemy==2.0.36",
    "uuid7>=0.1.0",
    "uvicorn==0.34.0",
]
